# design-pattern

./: .gitignore
bridge/include/: AFLens.h  Camera.h  LDModel.h  Lens.h  MFLens.h  Model.h  ODModel.h
bridge/src/: AFLens.cpp  Camera.cpp  Lens.cpp  MFLens.cpp
bridge/test/: Demo.cpp
creator/include/singleton/: singleton.hpp
creator/test/: CMakeLists.txt  singleton_test_app.cpp
iterator/: main.cpp
mediator/: mediator.cpp
